--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -9,7 +9,7 @@ displayName = "EN"
 isoCode = "en"
 rtl = false
 dateFormat = "2 January 2006"
-description = "Web dev gone low-level"
+description = "Going low-level."
 
 ["params.author"]
 name = "Fadlan Abduh"
