--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,7 +5,7 @@ summaryLength = 0
 buildDrafts = false
 buildFuture = false
 enableEmoji = true
-baseURL = "https://vfadlan.github.io/"
+baseURL = "https://fadlanabduh.my.id/"
 
 [pagination]
 pagerSize = 100
