--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -13,5 +13,5 @@ description = "Going low-level."
 
 ["params.author"]
 name = "Fadlan Abduh"
-headline = "I'm only human... or am I?"
-bio = "Overriding high-level code to master physical reality. Web dev gone deviant."
+headline = "Make yourself at home, have a read."
+bio = "Web dev gone deviant, chasing hardware truth."
