--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 colorScheme = "github"
 defaultAppearance = "dark"
-autoSwitchAppearance = true
+autoSwitchAppearance = false
 enableA11y = false
 enableSearch = true
 enableCodeCopy = false
