--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://fadlanabduh.my.id/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Fadlan Blog, have a read.'
