draft: max7219, add katex

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -14,4 +14,4 @@ description = "Going low-level."
 ["params.author"]
 name = "Fadlan Abduh"
 headline = "Make yourself at home, have a read."
-bio = "Web dev gone deviant, chasing hardware truth."
+bio = "Messing aroud with ones and zeros."
